Tue Dec 16 22:15:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  should assert by instance_of?, not ===.  [ruby-dev:37458]

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  typo fixed.

Mon Dec 15 20:59:10 2008  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (child_info): add slavename.
	  (chfunc): use slavename.
	  (establishShell): set slavename.
	
Tue Dec  9 13:23:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (check_cfunc): use function pointer.

Thu Nov 27 10:40:52 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): should return
	  Integer for #div operation.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): should raise
	  ZeroDivisionError if divisor is zero.  [ruby-dev:37207]

Mon Nov  3 00:36:44 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_event.rb: rename test class.

	* test/win32ole/test_win32ole_variant_outarg.rb: add in order
	  to use ADO instead of Internet Explorer.
	  remove test/win32ole/test_win32ole_variant_with_ie.rb.

	* test/win32ole/orig_data.csv: ditto.

Sun Nov  2 22:12:41 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_event_free): invoke IConnectionPoint::Unadvise
	  before invoking IConnectionPoint::Release.

	* test/win32ole/test_win32ole_event.rb, test/win32ole/err_in_callback.rb,
	  test/win32ole/test_err_in_callback.rb: Use ActiveX Data Object
	  Library instead of InternetExplorer.

Sun Nov  2 22:06:55 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* win32/Makefile.sub: add RUNRUBYOPT. [ruby-dev:37009]

Thu Dec 25 17:49:45 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (decorate_convpath): show type of escaping for
	  xml_attr_quote or some conversions.

Thu Dec 25 17:06:13 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_initialize): check fd validity.  [ruby-dev:36646]
